# c-training

./: CMakeLists.txt  README.md  task-1.c
C-problems/: CMakeLists.txt  problemAL.c  problemFY.c  problemHL.c  problemIPO.c  problemIS.c  problemLR.c  problemMP.c  problemMS.c  problemPF.c  problemRBS.c  problemSCB.c  problemSE.c  problemSI.c  problemSPO.c  problemSQ.c  problemSSE.c  task-1.c
