add_executable(task-1 task-1.c)
add_executable(problemPF problemPF.c)
add_executable(problemFY problemFY.c)
add_executable(problemSI problemSI.c)
add_executable(problemSCB problemSCB.c)
add_executable(problemSQ problemSQ.c)
add_executable(problemMS problemMS.c)
add_executable(problemMP problemMP.c)
add_executable(problemSE problemSE.c)
add_executable(problemSSE problemSSE.c)
add_executable(problemAL problemAL.c)
add_executable(problemRBS problemRBS.c)